feat: Data table with server side pagination and sorting, fix authentication and automate spec creation
